welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:6: error: ';' expected but ')' found.
      setPos(6-j,Math.abs(j-i)))
                               ^